[package]
name = "lotech-take-home"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
fixed = { version = "1.29.0", features = ["num-traits"] }
futures = "0.3.31"
hashers = "1.0.1"
http = "1.2.0"
jiff = { version = "0.2.1", features = ["serde"] }
monostate = "0.1.13"
num = "0.4.3"
pin-project = "1.1.9"
pin-project-lite = "0.2.16"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_path_to_error = "0.1.16"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tokio-websockets = { version = "0.11.3", features = [
    "client",
    "openssl",
    "rand",
] }
tracing = "0.1.41"
tracing-configuration = "0.2.0"
tracing-subscriber = "0.3.19"
